# shinchoku-chan

./: .gitignore  Procfile  README.md  package.json
bot/: Cargo.toml
bot/migrations/2021-06-29-214808_create_posts/: down.sql  up.sql
bot/src/: lib.rs  main.rs  models.rs  schema.rs
bot/src/commands/: db.rs  mod.rs  record.rs  utils.rs
viewer/: package-lock.json
viewer/backend/: index.js
viewer/frontend/: package-lock.json  package.json
viewer/frontend/public/: index.html  manifest.json
viewer/frontend/src/: App.js  index.css  index.js
viewer/frontend/src/components/: Button.js  Container.js  FormControl.js  FormControlLabel.js  Grid.js  InputLabel.js  Main.js  MenuItem.js  Select.js  Switch.js  Table.js  TableBody.js  TableCell.js  TableContainer.js  TableHead.js  TableRow.js  Tag.js  TextField.js  Typography.js
viewer/frontend/src/pages/: GraphView.js  Main.js  TableView.js
viewer/frontend/src/utils/: date.js
viewer/src/: index.js
