[package]
name = "shinchoku_chan"
version = "0.1.0"
authors = ["jpnykw <jpnykw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
diesel = { version = "1.4.0", features = ["mysql"] }
dotenv = "0.9.0"

