[package]
name = "shinchoku_chan"
version = "0.1.0"
authors = ["jpnykw <jpnykw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.7" }
diesel = { version = "1.4.0", features = ["mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.10"

